[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.7.1"
bytes = "1.5.0"
futures = "0.3.29"
http = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
