[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
async-trait = "0.1.74"
url = { version = "2.5.0", features = ["serde"] }
serde_json = { version = "1.0.108", features = ["preserve_order", "raw_value"] }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
reqwest-middleware = "0.2.4"
tracing = "0.1.40"
base64 = "0.21.5"
openssl = "0.10.60"
once_cell = "1.18.0"
http = "0.2.11"
sha2 = "0.10.8"
thiserror = "1.0.50"
derive_builder = "0.12.0"
itertools = "0.12.0"
dyn-clone = "1.0.16"
enum_delegate = "0.2.0"
httpdate = "1.0.3"
http-signature-normalization-reqwest = { version = "0.10.0", default-features = false, features = [
  "sha-2",
  "middleware",
  "default-spawner",
] }
http-signature-normalization = "0.7.0"
bytes = "1.5.0"
futures-core = { version = "0.3.29", default-features = false }
pin-project-lite = "0.2.13"
activitystreams-kinds = "0.3.0"
regex = { version = "1.10.2", default-features = false, features = ["std", "unicode-case"] }
futures = "0.3.29"
moka = { version = "0.12.1", features = ["future"] }

axum = { version = "0.6", features = ["json","headers","query","tracing"]}
tower = "0.4.13"
hyper =  "0.14"
http-body-util = "0.1.0"

anyhow = "1.0.75"
rand = "0.8.5"
env_logger = "0.10.1"
tower-http = { version = "0.4.0", features = ["map-request-body", "util", "trace"] }
axum-macros = "0.3.8"
activitypub_federation = "0.5.0-beta.5"
tokio = { version = "1.35.0", features = ["full"] }



sqlx = { version = "0.7", features = [ "runtime-tokio", "migrate", "sqlite", "chrono" , "json"] }


