[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
chrono = { version = "0.4.38", features = ["clock", "serde"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
url = { version = "2.5.3", features = ["serde"] }
serde_json = { version = "1.0.133", features = ["preserve_order", "raw_value"] }
tracing = "0.1.40"
thiserror = "1.0.69"
anyhow = "1.0.98"

# Async runtime and database
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "migrate", "postgres", "chrono" , "json", "ipnetwork"] }
reqwest = { version = "0.12.11", features = ["json"] }

# Tracing and observability (conservative updates)
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21.2", features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.14.0", features = ["trace", "metrics", "tonic"] }
opentelemetry-semantic-conventions = "0.13.0" 
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
uuid = { version = "1.17.0", features = ["v4"] }
ipnetwork = "0.21.1"

# Web server dependencies (conservative update)
axum = { version = "0.7.8", features = ["json","query","tracing","tokio"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4.4"
axum-test = "16.0.0"
serde_json = "1.0.133"
tempfile = "3.10.1"

